--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,6 +8,36 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
+ *= require scaffold
+ *= require foundation_and_overrides
  *= require_self
- *= require_tree .
  */
+
+.row_full_width {
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: initial;
+	background-color: #ffffff;
+}
+
+.row .row {
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 80em;
+}
+
+#misfit_description {
+	background-color: #ffffff;
+	color: #4c4c4c;
+}
+
+#misfit_description .row {
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 80em;
+}
+
+body {
+	background-color: #dedede;
+}
