--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,32 +13,71 @@
   </head>
 
   <body>
+    <div class="row row_full_width">
+    <div class="row">
     <nav class="top-bar" data-topbar>
-      <ul class="title-area">
-        <li class="name">
-          <h1><a href="#">Misfit Test</a></h1>
-        </li>
-         <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-        <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-      </ul>
-
-      <% if user_signed_in? %>
-        <section class="top-bar-section">
-          <!-- Right Nav Section -->
-          <ul class="right">
-            <li><a href="<%= destroy_user_session_path %>" data-method="delete" rel="nofollow"><span class="label alert">Log out</span></a></li>
-            <li><a href="<%= multiple_choice_questions_path %>">Questions</a></li>
-            <li><a href="<%= technical_tests_path %>">Tests</a></li>
-          </ul>
-        </section>
-      <% end %>
+      <section class="top-bar-section">
+        <ul class="left">
+          <li class="has-dropdown">
+            <a href="#">PRODUCTS</a>
+            <ul class="dropdown">
+              <li><a href="#">item 1</a></li>
+              <li><a href="#">item 2</a></li>
+              <li><a href="#">item 3</a></li>
+            </ul>
+          </li>
+          <li><a href="#">REVIEWS</a></li>
+          <li><a href="#">STORE</a></li>
+          <li><a href="#">SUPPORT</a></li>
+        </ul>
+        <ul class="center">
+          <li><a href="#"><%= image_tag("misfit_logo.jpg", :size => '30x30') %></a></li>
+        </ul>
+        <ul class="right">
+        <li><a href="<%= destroy_user_session_path %>" data-method="delete" rel="nofollow"><span class="label alert">LOG OUT</span></a></li>
+            <li><a href="<%= multiple_choice_questions_path %>">QUESTIONS</a></li>
+            <li><a href="<%= technical_tests_path %>">TESTS</a></li>
+        </ul>
+      </section>
     </nav>
+    </div>
+    </div>
 
     <div class="row">
       <div class="large-12 columns">
         <%= yield %>
       </div>
-  </div>
+    </div>
+
+    <div id="footer">
+      <div class="row row_full_width">
+        <div class="row"> 
+          <nav class="top-bar" data-topbar>
+           <section class="top-bar-section">
+            <ul class="left">
+              <li><a href="#">INFOGRAPHICS</a></li>
+              <li><a href="#">MISFITOPIA</a></li>
+              <li><a href="#">ABOUT</a></li>
+              <li><a href="#">TEAM</a></li>
+              <li><a href="#">MEDIA</a></li>
+              <li><a href="#">JOBS</a></li>
+              <li><a href="#">CONTACT</a></li>
+            </ul>
+            <ul class="right">
+              <li><a href="#"><%= image_tag("fb.png", :size => '8x8') %></a></li>
+              <li><a href="#"><%= image_tag("twitter.png", :size => '18x18') %></a></li>
+              <li><a href="#"><%= image_tag("pinterest.png", :size => '18x18') %></a></li>
+              <li><a href="#"><%= image_tag("google.png", :size => '18x18') %></a></li>
+            </ul>
+           </section>
+          </nav>
+        </div>
+      </div>
+      <div id="misfit_description">
+        <div class="row">asdasd
+        </div>
+      </div>
+    </div>
     
     <%= content_for?(:cssname) ? yield(:cssname) : "" %>
     <%= content_for?(:jsname) ? yield(:jsname) : "" %>
