--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,11 +57,7 @@
     </div>
 
     <div id="body" class="row row_full_width white_bg">
-    <div class="row">
-      <div class="large-12 columns">
         <%= yield %>
-      </div>
-    </div>
     </div>
 
     <div id="footer">
@@ -150,7 +146,7 @@
         </div>
       </div>-->
       <div id="misfit_description">
-        <div class="row">
+        <div class="row row_full_width">
           <div class="small-12 columns">
             <p><strong>Misfit Wearables</strong><span class="light_font"> 839 Mitten Road, Suite 100, Burlingame, CA 94010</span><br/>
             <span class="light_font">&copy; Copyright Misfit Wearables. All Rights Reserved. Terms of Use | Privacy Policy<br/>Apple, the Apple logo, iPhone and iPod touch are trademarks of Apple Inc.,<br/>registered in the U.S and other countries. App Store is a service mark of Apple Inc.</span>
