--- a/app/views/sally_apps/index.html.erb
+++ b/app/views/sally_apps/index.html.erb
@@ -49,21 +49,9 @@
 		</div>
 	</div>
 	<div class="row navigation-bar">
-		<nav class="top-bar" data-topbar>
-	      	<ul class="title-area">
-	        	<li class="name">
-	         		<h1><a href="#"></a></h1>
-	       		</li>
-	       		<li class="toggle-topbar menu-icon"><a href="#"><span>menu</span></a></li>
-	      	</ul>
-			<section class="top-bar-section">
-		        <ul class="left">
-	        		<li><a href="#">HOME</a></li>
-		          	<li><a href="#">SERVICES</a></li>
-		        	<li><a href="#">ABOUT</a></li>
-		        </ul>
-	      	</section>
-    	</nav>
+		<div class="row">
+
+		</div>
 	</div>
 </div>
 
